<resources>
    <string name="app_name">BŞEÜ Öğrenci Topluluğu</string>
    <string name="your_university">senin üniversiten</string>
    <string name="welcome">Hoş Geldin</string>
    <string name="mail">Mail</string>
    <string name="password">Şifre</string>
    <string name="forgot_pass">Şifremi Unuttum</string>
    <string name="login">GİRİŞ YAP</string>
    <string name="have_account">Hesabım Var</string>
    <string name="sign_in_to_continue">Devam etmek için giriş yapın</string>
    <string name="signup">Kaydol</string>
    <string name="student_no">Öğrenci No</string>
    <string name="name">İsim</string>
    <string name="surname">Soy İsim</string>
    <string name="i_have_account">Hesabım Var</string>
    <string name="uni_mail">example@ogrenci.bilecik.edu.tr</string>
    <string name="news">Haberler</string>
    <string name="questions">Sorular</string>
    <string name="lorem">İnsanlığın ortak değerlerine duyarlı, çevre, kültür ve estetik bilinci gelişmiş, çok yönlü, katılımc nsanlığın ortak değerlerineeeee duyarlı, çevre, kültür ve estetik bilinci gelişmiş, çok yönlü, katılımcı asa as asdjbaj jsadbh vasuv hasvd a bhbahs vvadh  dsadasd das asd asdas </string>
    <string name="long_lorem">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using Content here, content here, making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for lorem ipsum will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like). It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using Content here, content here, making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for lorem ipsum will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).</string>
    <string name="news_title">Bilecik Üniversitesi Gelişiyor</string>
    <string name="b_l_m_se">Bölüm Seç</string>
    <string name="add_image">Resim Ekle</string>
    <string name="departments">Bölümler</string>
    <string name="school_clubs">Kulüpler</string>
    <string name="will_be_soon">Bölümünü bulamadıysan şimdilik <b>Bölümüm Yok</b> seçeneğini seç. <br/> Daha sonra bana bildir :)</string>
    <string name="menu">Menü</string>
    <string name="edit_my_profile">Profilimi Düzenle</string>
    <string name="exit">Çıkış Yap</string>
    <string name="dormitory">Yurtlar</string>
    <string name="today_meal">Bugünün Yemeği</string>
    <string name="plaint">Şikayet Et</string>
    <string name="send_error">Hata Bildir</string>
    <string name="connect_us">İletişime Geç</string>
    <string name="suggestion">Öneride Bulun</string>
    <string name="changeMyPass">Şifremi Değiştir</string>
    <string name="meal_of_today">Bugünün Yemeği</string>
    <string name="do_comment">Yorum Yap</string>
    <string name="write_ur_comment">Yorumunu yaz</string>
    <string name="comments">Yorumlar</string>
    <string name="write_ur_q">Sorunu Yaz</string>
    <string name="question_title">Soru Başlığı</string>
    <string name="question_text">Soru İçeriği</string>
    <string name="what_do_u_think">Ne Düşünüyorsun ?</string>
    <string name="answer_it">Cevap Ver</string>
    <string name="sign_in_whatsapp_group">Whatsapp Grubuna Katıl</string>
    <string name="follow_facebook">Facebook Hesabını Takip Et</string>
    <string name="follow_instagram">Instagram Hesabını Takip Et</string>
    <string name="follow_twitter">Twitter Hesabını Takip Et</string>
    <string name="like_club">Kulübü ÖNERİYORUM</string>
    <string name="dislike_club">Kulübü ÖNERMİYORUM</string>
    <string name="dormitory_prop">Yurt Özellikleri</string>
    <string name="like_dormitory">Yurdu ÖNERİYORUM</string>
    <string name="dislike_dormitory">Yurdu ÖNERMİYORUM</string>
    <string name="send_text">Gönder</string>
    <string name="your_content">Mesajın</string>
    <string name="sentences">İtiraflar</string>
    <string name="anonymous">ANONİM</string>
    <string name="write_ur_confession">İtirafını Yaz</string>
    <string name="no_problem_bro">Meraklanma! <br />Yapacağın paylaşım anonim olarak yayınlanacak :)</string>
    <string name="settings">Ayarlar</string>
    <string name="update">Güncelle</string>
    <string name="new_pass">Yeni Şifre</string>
    <string name="again_pass">Şifreyi Tekrarla</string>
    <string name="empty_text">Henüz yorum yapılmamış :/</string>
    <string name="private_notification">Bölüm Duyuru Bildirimi</string>
    <string name="info">Bilgilendirme</string>
    <string name="agreement">Uygulama içindeki diğer öğrenci arkadaşlarıma karşı saygılı olacağıma dair söz veririm.</string>
</resources>