<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".Activities.LoginActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_80sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_8sdp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toTopOf="@id/scrollView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/top_left_right"
        android:padding="@dimen/_12sdp"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/welcomeText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:fontFamily="@font/ubuntu_bold"
                android:text="@string/welcome"
                android:textAlignment="center"
                android:textColor="@color/background_color"
                android:textSize="@dimen/_28ssp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4sdp"
                android:fontFamily="@font/ubuntu"
                android:text="@string/sign_in_to_continue"
                android:textColor="@android:color/tertiary_text_light"
                android:textSize="@dimen/_12ssp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/inputEmail"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginTop="@dimen/_40sdp"
                android:background="@drawable/background_input"
                android:drawableStart="@drawable/ic_round_mail_24"
                android:drawablePadding="@dimen/_12sdp"
                android:fontFamily="@font/ubuntu"
                android:hint="@string/uni_mail"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:paddingStart="@dimen/_8sdp"
                android:paddingEnd="@dimen/_16sdp"
                android:textColor="@color/primary_text"
                android:textColorHint="@android:color/tertiary_text_light"
                android:textSize="@dimen/_13ssp" />

            <EditText
                android:id="@+id/inputPass"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:background="@drawable/background_input"
                android:drawableStart="@drawable/ic_round_lock_24"
                android:drawablePadding="@dimen/_12sdp"
                android:fontFamily="@font/ubuntu"
                android:hint="@string/password"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:paddingStart="@dimen/_8sdp"
                android:paddingEnd="@dimen/_16sdp"
                android:textColor="@color/primary_text"
                android:textColorHint="@android:color/tertiary_text_light"
                android:textSize="@dimen/_13ssp" />

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12sdp"
                android:animateLayoutChanges="true">

                <TextView
                    android:id="@+id/forgotPass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/ubuntu"
                    android:text="@string/forgot_pass"
                    android:textColor="@android:color/tertiary_text_light" />

                <com.github.ybq.android.spinkit.SpinKitView
                    android:id="@+id/passwordProgress"
                    style="@style/SpinKitView.FoldingCube"
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:layout_gravity="center"
                    android:visibility="invisible"
                    app:SpinKit_Color="@color/background_color" />

            </FrameLayout>


            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:animateLayoutChanges="true">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/buttonSignIn"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_50sdp"
                    android:background="@color/background_color"
                    android:fontFamily="@font/ubuntu"
                    android:text="@string/login"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_13ssp"
                    android:textStyle="bold" />

                <com.github.ybq.android.spinkit.SpinKitView
                    android:id="@+id/progressBar"
                    style="@style/SpinKitView.FoldingCube"
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:layout_gravity="center"
                    android:visibility="invisible"
                    app:SpinKit_Color="@color/background_color" />

            </FrameLayout>

            <TextView
                android:id="@+id/textCreateNewAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_30sdp"
                android:fontFamily="@font/ubuntu"
                android:text="@string/signup"
                android:textColor="@android:color/tertiary_text_light"
                android:textSize="@dimen/_13ssp"
                android:textStyle="bold" />

        </LinearLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>