<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".Activities.ChangePasswordActivity">

    <ImageView
        android:id="@+id/backImage"
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_25sdp"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_round_arrow_back_ios_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/background_color" />

    <TextView
        android:id="@+id/pageTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ubuntu"
        android:text="@string/changeMyPass"
        android:textAlignment="center"
        android:textColor="@color/background_color"
        android:textSize="@dimen/_24ssp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/backImage" />

    <EditText
        android:id="@+id/newPass"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:autofillHints="@string/app_name"
        android:background="@drawable/background_input"
        android:fontFamily="@font/ubuntu"
        android:hint="@string/new_pass"
        android:inputType="textPassword"
        android:maxLength="12"
        android:padding="@dimen/_8sdp"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/tertiary_text_light"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pageTitle" />

    <EditText
        android:id="@+id/newPass2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:autofillHints="@string/app_name"
        android:background="@drawable/background_input"
        android:fontFamily="@font/ubuntu"
        android:hint="@string/again_pass"
        android:inputType="textPassword"
        android:maxLength="12"
        android:padding="@dimen/_8sdp"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/tertiary_text_light"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/newPass" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/changeButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:background="@color/background_color"
        android:fontFamily="@font/ubuntu"
        android:text="@string/update"
        android:textColor="@color/white"
        android:textSize="@dimen/_13ssp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/newPass2" />

    <com.github.ybq.android.spinkit.SpinKitView
        android:id="@+id/progressItems"
        style="@style/SpinKitView.FoldingCube"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:SpinKit_Color="@color/background_color"
        app:layout_constraintBottom_toBottomOf="@id/changeButton"
        app:layout_constraintEnd_toEndOf="@id/changeButton"
        app:layout_constraintStart_toStartOf="@id/changeButton"
        app:layout_constraintTop_toTopOf="@id/changeButton" />

</androidx.constraintlayout.widget.ConstraintLayout>