<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".Activities.AddQuestionActivity">

    <ImageView
        android:id="@+id/backImage"
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_25sdp"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_round_arrow_back_ios_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/background_color" />

    <TextView
        android:id="@+id/pageTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ubuntu"
        android:text="@string/write_ur_q"
        android:textAlignment="center"
        android:textColor="@color/background_color"
        android:textSize="@dimen/_24ssp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/backImage" />

    <ScrollView
        android:id="@+id/questionLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/_12sdp"
        app:layout_constraintBottom_toTopOf="@id/sendQuestionContent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pageTitle">

        <LinearLayout
            android:id="@+id/addQuestionLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/questionTITLE"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:autofillHints="no"
                android:background="@drawable/background_input"
                android:drawableStart="@drawable/ic_round_title_24"
                android:drawablePadding="@dimen/_8sdp"
                android:fontFamily="@font/ubuntu"
                android:hint="@string/question_title"
                android:inputType="text"
                android:maxLength="100"
                android:paddingStart="@dimen/_8sdp"
                android:paddingEnd="@dimen/_8sdp"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/tertiary_text_light" />

            <EditText
                android:id="@+id/questionTEXT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:autofillHints="no"
                android:background="@drawable/background_input"
                android:drawablePadding="@dimen/_8sdp"
                android:fontFamily="@font/ubuntu"
                android:gravity="top"
                android:hint="@string/question_text"
                android:inputType="textMultiLine"
                android:maxLength="300"
                android:minHeight="@dimen/_100sdp"
                android:padding="@dimen/_8sdp"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/tertiary_text_light" />
        </LinearLayout>

    </ScrollView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sendQuestionContent"
        android:layout_width="0dp"
        android:layout_height="@dimen/_45sdp"
        android:layout_marginBottom="@dimen/_8sdp"
        android:background="@color/background_color"
        android:fontFamily="@font/ubuntu"
        android:text="@string/send_text"
        android:textColor="@color/white"
        android:textSize="@dimen/_12ssp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/questionLayout"
        app:layout_constraintStart_toStartOf="@id/questionLayout"
        app:layout_constraintTop_toBottomOf="@id/questionLayout" />

    <com.github.ybq.android.spinkit.SpinKitView
        android:id="@+id/progressItems"
        style="@style/SpinKitView.FoldingCube"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:SpinKit_Color="@color/background_color"
        app:layout_constraintBottom_toBottomOf="@id/sendQuestionContent"
        app:layout_constraintEnd_toEndOf="@id/sendQuestionContent"
        app:layout_constraintStart_toStartOf="@id/sendQuestionContent"
        app:layout_constraintTop_toTopOf="@id/sendQuestionContent" />

</androidx.constraintlayout.widget.ConstraintLayout>