<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/confessionLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_12sdp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ubuntu"
                android:text="@string/anonymous"
                android:textColor="@color/background_color"
                android:textSize="@dimen/_14ssp"
                android:textStyle="italic"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/confessionDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="123 12321 213"
                android:fontFamily="@font/ubuntu"
                android:textColor="@android:color/background_dark"
                android:textSize="@dimen/_8ssp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/confessionContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lorem"
            android:fontFamily="@font/ubuntu"
            android:textColor="@android:color/tertiary_text_dark"
            android:textSize="@dimen/_11ssp" />

        <ImageView
            android:id="@+id/reportConfession"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_round_report_24"
            app:tint="@android:color/holo_red_light"
            android:layout_gravity="end"/>

    </LinearLayout>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/confessionLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>