<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".Activities.AddConfessionActivity">

    <ImageView
        android:id="@+id/backImage"
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_25sdp"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_round_arrow_back_ios_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/background_color" />

    <TextView
        android:id="@+id/pageTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ubuntu"
        android:text="@string/write_ur_confession"
        android:textAlignment="center"
        android:textColor="@color/background_color"
        android:textSize="@dimen/_24ssp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/backImage" />

    <TextView
        android:id="@+id/info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:fontFamily="@font/ubuntu"
        android:text="@string/no_problem_bro"
        android:textAlignment="center"
        android:textColor="@color/background_color"
        android:textStyle="italic"
        app:layout_constraintTop_toBottomOf="@id/pageTitle" />

    <ScrollView
        android:id="@+id/layoutScroll"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/_12sdp"
        app:layout_constraintBottom_toTopOf="@id/sendConfessionContent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/info">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <EditText
                android:id="@+id/confessionContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/app_name"
                android:background="@drawable/background_input"
                android:fontFamily="@font/ubuntu"
                android:gravity="top"
                android:hint="@string/write_ur_confession"
                android:inputType="textMultiLine"
                android:maxLength="300"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/tertiary_text_light"
                android:minHeight="@dimen/_150sdp"
                android:padding="@dimen/_8sdp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sendConfessionContent"
        android:layout_width="0dp"
        android:layout_height="@dimen/_45sdp"
        android:layout_marginBottom="@dimen/_8sdp"
        android:background="@color/background_color"
        android:fontFamily="@font/ubuntu"
        android:text="@string/send_text"
        android:textColor="@color/white"
        android:textSize="@dimen/_12ssp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/layoutScroll"
        app:layout_constraintStart_toStartOf="@id/layoutScroll"
        app:layout_constraintTop_toBottomOf="@id/layoutScroll" />

    <com.github.ybq.android.spinkit.SpinKitView
        android:id="@+id/progressItems"
        style="@style/SpinKitView.FoldingCube"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:SpinKit_Color="@color/background_color"
        app:layout_constraintBottom_toBottomOf="@id/sendConfessionContent"
        app:layout_constraintEnd_toEndOf="@id/sendConfessionContent"
        app:layout_constraintStart_toStartOf="@id/sendConfessionContent"
        app:layout_constraintTop_toTopOf="@id/sendConfessionContent" />

</androidx.constraintlayout.widget.ConstraintLayout>